--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>四则运算练习</title>
+    <title>桃桃朵朵学数学</title>
     <style>
         .container { width: 0 auto; margin: 0 auto; padding: 20px }
         .question { font-size: 48px; margin: 20px 0 }
